Adjust MoviesTabs' style; Fix background bug when scrolling on mobile chrome browser on Android; Replace last and first custom attributes with css pseudo-classes on MoviesPaginator

--- a/src/views/style/sass/MoviesPaginator.scss
+++ b/src/views/style/sass/MoviesPaginator.scss
@@ -49,7 +49,9 @@
 .paginator-button-control {
 	@extend .paginator-button;
 
-	&[first] {
+	&:first-child,
+	&:nth-child(2),
+	&:last-child {
 		margin-left: 0;
 	}
 
